--- a/live_coding/eshtml/main.css
+++ b/live_coding/eshtml/main.css
@@ -1,27 +1,12 @@
 
-/* .blue {
-  float: left;
-  width: 50px;
-  height: 50px;
-  background-color: blue;
-} 
-.red {
-  float: right;
-  width: 50px;
-  height: 50px;
-  background-color: red;
-}
 
-.green {
-  background-color: green;
-  /*display: inline-block;
-  width: 100%;*/
-  /*
-}
- 
-.green:after {
-  content: "";
-  display: table;
-  clear: both;
 
-} */
+
+
+/*regole di debug*/
+
+[class*="col-"] {
+  height: 150px;
+  background: gray;
+  border: solid 1px #000;
+}
